<resources>
    <string name="app_name">YesChurch</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_log_in">Log in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- strings related to filters -->
    <string name="apply">Aplicar</string>
    <string name="hasbathroom">Baños</string>
    <string name="hasparking">Parqueadero</string>
    <string name="haskids">Kids</string>
    <string name="hasaccesability">Acceso silla de ruedas</string>
    <string name="hassignlanguage">Lenguage de señas</string>
    <string-array name="languages">
        <item>Español</item>
        <item>Ingles</item>
        <item>Portugues</item>
    </string-array>

    <string name="label_church_name">Nombre:</string>
    <string name="label_church_url">URL:</string>
    <string name="label_church_phone">Celular:</string>
    <string name="label_church_type">Denominacion:</string>
    <string name="label_church_schedule">Horarios:</string>
    <string name="label_church_kids">Kids:</string>
    <string name="label_church_hasParking">Parqueadero propio:</string>
    <string name="label_church_hasParkingOutside">Parqueadero Aledaño:</string>
    <string name="label_church_hasAccessibility">Acceso a discapacitados</string>
    <string name="label_church_idioms">Idiomas:</string>
    <string name="label_church_hasSignLanguage">Lenguaje de señas</string>
    <string name="label_church_hasBathrooms">Baños</string>
    <string name="label_church_assistants"># assistants:</string>

    <!-- String related to slide menu maps board  -->
    <string-array name="menu">
        <item>Tipo Iglesia</item>
        <item>Baños</item>
        <item>Parqueadero</item>
    </string-array>
    <string-array name="churchtype">
        <item>Cristiana</item>
        <item>Catolica</item>
        <item>Bautista</item>
        <item>Otra</item>
    </string-array>
    <string name="filter">Filtros</string>

    <string-array name="type_churches">
        <item>Su presencia</item>
        <item>Adventista 8 </item>
        <item>Mormona</item>
    </string-array>

    <array name="icons">
        <item>@drawable/religion_pray_church</item>
        <item>@drawable/religion_pray_church</item>
        <item>@drawable/religion_pray_church</item>
    </array>

    <string name="action_settings">Settings</string>
    <string name="button_church_pictures">Ver fotos</string>
    <string name="title_activity_paola">paola</string>
    <string name="title_activity_picture">PictureActivity</string>

</resources>
