<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="195dp"
                android:contentDescription="Default icon church"
                app:srcCompat="@drawable/church_cartoon_default" />

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout1"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="20"
                tools:context=".GridXMLActivity">

                <TextView
                    android:id="@+id/label_church_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:text="@string/label_church_name"
                    android:textSize="14sp" />

                <EditText
                    android:id="@+id/text_church_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:clickable="false"
                    android:focusable="false"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:inputType="none"
                    android:longClickable="false"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/label_church_url"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_url" />

                <EditText
                    android:id="@+id/text_church_url"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:longClickable="false" />

                <ImageView
                    android:id="@+id/icon_assistants"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:contentDescription="icon asisstants"
                    android:textAlignment="viewStart"
                    app:srcCompat="@drawable/asistants_icon" />

                <EditText
                    android:id="@+id/text_church_assistants"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="2"
                    android:layout_column="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:longClickable="false" />

                <TextView
                    android:id="@+id/label_church_schedule"
                    android:layout_marginStart="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:text="@string/label_church_schedule" />

                <EditText
                    android:id="@+id/text_church_schedule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textCapSentences|textMultiLine"
                    android:maxLines ="4"
                    android:layout_row="3"
                    android:layout_column="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false" />

                <TextView
                    android:id="@+id/label_church_idioms"
                    android:layout_width="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_idioms" />

                <EditText
                    android:id="@+id/text_church_idioms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_row="4"
                    android:layout_column="1"
                    android:clickable="false"
                    android:focusable="false"
                    android:longClickable="false" />

            </GridLayout>

            <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/GridLayout2"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:orientation="horizontal"
                android:rowCount="20"
                tools:context=".GridXMLActivity">

                <TextView
                    android:id="@+id/label_church_kids"
                    android:layout_width="wrap_content"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_kids" />

                <ImageView
                    android:id="@+id/text_church_kids_yes"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_row="0"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

                <!--<EditText WARN ABOVE WITH KIDS YES AND NO
                    android:id="@+id/text_church_kids"
                    android:layout_width="195dp"
                    android:layout_height="wrap_content"

                    android:clickable="false"
                    android:focusable="false"
                    android:inputType="none"
                    android:longClickable="false" />-->

                <TextView
                    android:id="@+id/label_church_hasParking"
                    android:layout_width="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_hasParking" />

                <ImageView
                    android:id="@+id/text_church_hasParking_yes"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginStart="10dp"
                    android:layout_row="1"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

                <TextView
                    android:id="@+id/label_church_hasParkingOutside"
                    android:layout_width="wrap_content"
                    android:layout_row="2"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_hasParkingOutside" />

                <ImageView
                    android:id="@+id/text_church_hasParkingOutside_yes"
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_row="2"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

                <TextView
                    android:id="@+id/label_church_hasAccessibility"
                    android:layout_width="wrap_content"
                    android:layout_row="3"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_hasAccessibility" />

                <ImageView
                    android:id="@+id/text_church_hasAccessibility_yes"
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_row="3"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

                <TextView
                    android:id="@+id/label_church_hasSignLanguage"
                    android:layout_width="wrap_content"
                    android:layout_row="4"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_hasSignLanguage" />

                <ImageView
                    android:id="@+id/text_church_hasSignLanguage_yes"
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_row="4"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

                <TextView
                    android:id="@+id/label_church_hasBathrooms"
                    android:layout_width="wrap_content"
                    android:layout_row="5"
                    android:layout_column="0"
                    android:layout_height="36dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/label_church_hasBathrooms" />

                <ImageView
                    android:id="@+id/text_church_hasBathrooms_yes"
                    android:layout_marginStart="10dp"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_row="5"
                    android:layout_column="1"
                    app:srcCompat="@drawable/yes" />

            </GridLayout>

            <Button
                android:id="@+id/button_church_photos"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorButtonPink"
                android:text="@string/button_church_pictures"
                android:textAlignment="center" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>